feat(student-management): add course assignment toggles